# axon-devops

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
ansible/: Makefile  README.md  create_user.yml  hosts  init_project.yml  init_server.yml  muta.yml  (+1 more)
axon-cli/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  history.txt
axon-cli/apm/: apm_start.sh  apm_stop.sh
axon-cli/apm/deploy/: Makefile  deploy_monitor.yml  deploy_monitor_agent.yml  hosts  init_config.sh
axon-cli/apm/deploy/roles/agent/tasks/: main.yml
axon-cli/apm/deploy/roles/agent/vars/: main.yaml
axon-cli/apm/deploy/roles/monitor/tasks/: main.yml
axon-cli/apm/deploy/roles/monitor/vars/: main.yaml
axon-cli/apm/monitor/config/elastalert2/: config.json
axon-cli/apm/monitor/config/grafana/: grafana.ini
axon-cli/apm/monitor/config/grafana/dashboards/: axon-benchmark.json  axon-node.json
axon-cli/apm/monitor/config/grafana/provisioning/datasources/: datasources.yaml
axon-cli/apm/monitor/config/grafana/provisioning/notifiers/: notifiers.yaml
axon-cli/apm/monitor/config/promethues/: axon-network-rules.yml  prometheus.yml
axon-cli/devtools/config/: config.toml  genesis_four_nodes.json  genesis_single_node.json  node_1.toml  node_2.toml  node_3.toml  node_4.toml
axon-cli/src/: apm.rs  axon_node.rs  cli.rs  docker.rs  interactive.rs  main.rs  mydocker.rs  sub_command.rs
axon-cli/src/crosschain/: constants.rs  helper.rs  mod.rs
axon-cli/src/crosschain_tx/: constants.rs  crosschain.rs  helper.rs  mod.rs
(+539 files in other folders)
